tests/sumo/spec/departure/errors/depart_unsorted/options.sumo
--no-step-log --no-duration-log --net-file=net.net.xml -a=input_routes.rou.xml
-v false
-r input_additional.add.xml 
--tripinfo-output tripinfos.xml
--log log.txt
--time-to-teleport 50
